languages/define/define_parser.go
// Code generated from Define.g4 by ANTLR 4.7.2. DO NOT EDIT.

package parser // Define

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'symbol'", "'define'", "'defaultSymbol'", "'defaultTemplate'", "'module'",
	"'import'", "'equal'", "", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'",
	"','", "'.'", "':'",
}
var symbolicNames = []string{
	"", "SYMBOL_TEXT", "DEFINE", "DEFAULT_SYMBOL", "DEFAULT_TEMPLATE", "MODULE",
	"IMPORT", "EQUAL", "IDENTIFIER", "LPAREN", "RPAREN", "LBRACE", "RBRACE",
	"LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "COLON", "WS", "COMMENT", "LINE_COMMENT",
	"STRING_LITERAL",
}

var ruleNames = []string{
	"compilationUnit", "symbolDeclaration", "normalDeclarations", "defineDeclaration",
	"defineExpress", "defineAttribute", "defineTemplate", "symbolKey", "symbolValue",
	"defineBody", "templateData", "systemDeclaration", "defineKey", "defineValue",
	"moduleDeclaration", "moduleDefine", "moduleAttributes",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type DefineParser struct {
	*antlr.BaseParser
}

func NewDefineParser(input antlr.TokenStream) *DefineParser {
	this := new(DefineParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Define.g4"

	return this
}

// DefineParser tokens.
const (
	DefineParserEOF              = antlr.TokenEOF
	DefineParserSYMBOL_TEXT      = 1
	DefineParserDEFINE           = 2
	DefineParserDEFAULT_SYMBOL   = 3
	DefineParserDEFAULT_TEMPLATE = 4
	DefineParserMODULE           = 5
	DefineParserIMPORT           = 6
	DefineParserEQUAL            = 7
	DefineParserIDENTIFIER       = 8
	DefineParserLPAREN           = 9
	DefineParserRPAREN           = 10
	DefineParserLBRACE           = 11
	DefineParserRBRACE           = 12
	DefineParserLBRACK           = 13
	DefineParserRBRACK           = 14
	DefineParserSEMI             = 15
	DefineParserCOMMA            = 16
	DefineParserDOT              = 17
	DefineParserCOLON            = 18
	DefineParserWS               = 19
	DefineParserCOMMENT          = 20
	DefineParserLINE_COMMENT     = 21
	DefineParserSTRING_LITERAL   = 22
)

// DefineParser rules.
const (
	DefineParserRULE_compilationUnit    = 0
	DefineParserRULE_symbolDeclaration  = 1
	DefineParserRULE_normalDeclarations = 2
	DefineParserRULE_defineDeclaration  = 3
	DefineParserRULE_defineExpress      = 4
	DefineParserRULE_defineAttribute    = 5
	DefineParserRULE_defineTemplate     = 6
	DefineParserRULE_symbolKey          = 7
	DefineParserRULE_symbolValue        = 8
	DefineParserRULE_defineBody         = 9
	DefineParserRULE_templateData       = 10
	DefineParserRULE_systemDeclaration  = 11
	DefineParserRULE_defineKey          = 12
	DefineParserRULE_defineValue        = 13
	DefineParserRULE_moduleDeclaration  = 14
	DefineParserRULE_moduleDefine       = 15
	DefineParserRULE_moduleAttributes   = 16
)

// ICompilationUnitContext is an interface to support dynamic dispatch.
type ICompilationUnitContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCompilationUnitContext differentiates from other interfaces.
	IsCompilationUnitContext()
}

type CompilationUnitContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCompilationUnitContext() *CompilationUnitContext {
	var p = new(CompilationUnitContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DefineParserRULE_compilationUnit
	return p
}

func (*CompilationUnitContext) IsCompilationUnitContext() {}

func NewCompilationUnitContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CompilationUnitContext {
	var p = new(CompilationUnitContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DefineParserRULE_compilationUnit

	return p
}

func (s *CompilationUnitContext) GetParser() antlr.Parser { return s.parser }

func (s *CompilationUnitContext) EOF() antlr.TerminalNode {
	return s.GetToken(DefineParserEOF, 0)
}

func (s *CompilationUnitContext) AllSymbolDeclaration() []ISymbolDeclarationContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ISymbolDeclarationContext)(nil)).Elem())
	var tst = make([]ISymbolDeclarationContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ISymbolDeclarationContext)
		}
	}

	return tst
}

func (s *CompilationUnitContext) SymbolDeclaration(i int) ISymbolDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISymbolDeclarationContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ISymbolDeclarationContext)
}

func (s *CompilationUnitContext) DefineDeclaration() IDefineDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDefineDeclarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDefineDeclarationContext)
}

func (s *CompilationUnitContext) AllNormalDeclarations() []INormalDeclarationsContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*INormalDeclarationsContext)(nil)).Elem())
	var tst = make([]INormalDeclarationsContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(INormalDeclarationsContext)
		}
	}

	return tst
}

func (s *CompilationUnitContext) NormalDeclarations(i int) INormalDeclarationsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INormalDeclarationsContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(INormalDeclarationsContext)
}

func (s *CompilationUnitContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompilationUnitContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CompilationUnitContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DefineListener); ok {
		listenerT.EnterCompilationUnit(s)
	}
}

func (s *CompilationUnitContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DefineListener); ok {
		listenerT.ExitCompilationUnit(s)
	}
}

func (s *CompilationUnitContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DefineVisitor:
		return t.VisitCompilationUnit(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DefineParser) CompilationUnit() (localctx ICompilationUnitContext) {
	localctx = NewCompilationUnitContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, DefineParserRULE_compilationUnit)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(37)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == DefineParserSYMBOL_TEXT {
		{
			p.SetState(34)
			p.SymbolDeclaration()
		}

		p.SetState(39)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(41)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == DefineParserDEFINE {
		{
			p.SetState(40)
			p.DefineDeclaration()
		}

	}
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == DefineParserMODULE || _la == DefineParserIDENTIFIER {
		{
			p.SetState(43)
			p.NormalDeclarations()
		}

		p.SetState(48)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(49)
		p.Match(DefineParserEOF)
	}

	return localctx
}

// ISymbolDeclarationContext is an interface to support dynamic dispatch.
type ISymbolDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSymbolDeclarationContext differentiates from other interfaces.
	IsSymbolDeclarationContext()
}

type SymbolDeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySymbolDeclarationContext() *SymbolDeclarationContext {
	var p = new(SymbolDeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DefineParserRULE_symbolDeclaration
	return p
}

func (*SymbolDeclarationContext) IsSymbolDeclarationContext() {}

func NewSymbolDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SymbolDeclarationContext {
	var p = new(SymbolDeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DefineParserRULE_symbolDeclaration

	return p
}

func (s *SymbolDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *SymbolDeclarationContext) SYMBOL_TEXT() antlr.TerminalNode {
	return s.GetToken(DefineParserSYMBOL_TEXT, 0)
}

func (s *SymbolDeclarationContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(DefineParserIDENTIFIER, 0)
}

func (s *SymbolDeclarationContext) STRING_LITERAL() antlr.TerminalNode {
	return s.GetToken(DefineParserSTRING_LITERAL, 0)
}

func (s *SymbolDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SymbolDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SymbolDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DefineListener); ok {
		listenerT.EnterSymbolDeclaration(s)
	}
}

func (s *SymbolDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DefineListener); ok {
		listenerT.ExitSymbolDeclaration(s)
	}
}

func (s *SymbolDeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DefineVisitor:
		return t.VisitSymbolDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DefineParser) SymbolDeclaration() (localctx ISymbolDeclarationContext) {
	localctx = NewSymbolDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, DefineParserRULE_symbolDeclaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.Match(DefineParserSYMBOL_TEXT)
	}
	{
		p.SetState(52)
		p.Match(DefineParserIDENTIFIER)
	}
	{
		p.SetState(53)
		p.Match(DefineParserSTRING_LITERAL)
	}

	return localctx
}

// INormalDeclarationsContext is an interface to support dynamic dispatch.
type INormalDeclarationsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNormalDeclarationsContext differentiates from other interfaces.
	IsNormalDeclarationsContext()
}

type NormalDeclarationsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNormalDeclarationsContext() *NormalDeclarationsContext {
	var p = new(NormalDeclarationsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DefineParserRULE_normalDeclarations
	return p
}

func (*NormalDeclarationsContext) IsNormalDeclarationsContext() {}

func NewNormalDeclarationsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NormalDeclarationsContext {
	var p = new(NormalDeclarationsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DefineParserRULE_normalDeclarations

	return p
}

func (s *NormalDeclarationsContext) GetParser() antlr.Parser { return s.parser }

func (s *NormalDeclarationsContext) SystemDeclaration() ISystemDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISystemDeclarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISystemDeclarationContext)
}

func (s *NormalDeclarationsContext) ModuleDeclaration() IModuleDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IModuleDeclarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IModuleDeclarationContext)
}

func (s *NormalDeclarationsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NormalDeclarationsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NormalDeclarationsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DefineListener); ok {
		listenerT.EnterNormalDeclarations(s)
	}
}

func (s *NormalDeclarationsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DefineListener); ok {
		listenerT.ExitNormalDeclarations(s)
	}
}

func (s *NormalDeclarationsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DefineVisitor:
		return t.VisitNormalDeclarations(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DefineParser) NormalDeclarations() (localctx INormalDeclarationsContext) {
	localctx = NewNormalDeclarationsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, DefineParserRULE_normalDeclarations)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(57)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case DefineParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(55)
			p.SystemDeclaration()
		}

	case DefineParserMODULE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(56)
			p.ModuleDeclaration()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IDefineDeclarationContext is an interface to support dynamic dispatch.
type IDefineDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDefineDeclarationContext differentiates from other interfaces.
	IsDefineDeclarationContext()
}

type DefineDeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDefineDeclarationContext() *DefineDeclarationContext {
	var p = new(DefineDeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DefineParserRULE_defineDeclaration
	return p
}

func (*DefineDeclarationContext) IsDefineDeclarationContext() {}

func NewDefineDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefineDeclarationContext {
	var p = new(DefineDeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DefineParserRULE_defineDeclaration

	return p
}

func (s *DefineDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *DefineDeclarationContext) DEFINE() antlr.TerminalNode {
	return s.GetToken(DefineParserDEFINE, 0)
}

func (s *DefineDeclarationContext) DefineKey() IDefineKeyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDefineKeyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDefineKeyContext)
}

func (s *DefineDeclarationContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(DefineParserLBRACE, 0)
}

func (s *DefineDeclarationContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(DefineParserRBRACE, 0)
}

func (s *DefineDeclarationContext) AllDefineExpress() []IDefineExpressContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDefineExpressContext)(nil)).Elem())
	var tst = make([]IDefineExpressContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDefineExpressContext)
		}
	}

	return tst
}

func (s *DefineDeclarationContext) DefineExpress(i int) IDefineExpressContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDefineExpressContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDefineExpressContext)
}

func (s *DefineDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DefineDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DefineDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DefineListener); ok {
		listenerT.EnterDefineDeclaration(s)
	}
}

func (s *DefineDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DefineListener); ok {
		listenerT.ExitDefineDeclaration(s)
	}
}

func (s *DefineDeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DefineVisitor:
		return t.VisitDefineDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DefineParser) DefineDeclaration() (localctx IDefineDeclarationContext) {
	localctx = NewDefineDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, DefineParserRULE_defineDeclaration)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(59)
		p.Match(DefineParserDEFINE)
	}
	{
		p.SetState(60)
		p.DefineKey()
	}
	{
		p.SetState(61)
		p.Match(DefineParserLBRACE)
	}
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == DefineParserDEFAULT_SYMBOL || _la == DefineParserDEFAULT_TEMPLATE {
		{
			p.SetState(62)
			p.DefineExpress()
		}

		p.SetState(67)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(68)
		p.Match(DefineParserRBRACE)
	}

	return localctx
}

// IDefineExpressContext is an interface to support dynamic dispatch.
type IDefineExpressContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDefineExpressContext differentiates from other interfaces.
	IsDefineExpressContext()
}

type DefineExpressContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDefineExpressContext() *DefineExpressContext {
	var p = new(DefineExpressContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DefineParserRULE_defineExpress
	return p
}

func (*DefineExpressContext) IsDefineExpressContext() {}

func NewDefineExpressContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefineExpressContext {
	var p = new(DefineExpressContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DefineParserRULE_defineExpress

	return p
}

func (s *DefineExpressContext) GetParser() antlr.Parser { return s.parser }

func (s *DefineExpressContext) DefineAttribute() IDefineAttributeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDefineAttributeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDefineAttributeContext)
}

func (s *DefineExpressContext) DefineTemplate() IDefineTemplateContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDefineTemplateContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDefineTemplateContext)
}

func (s *DefineExpressContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DefineExpressContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DefineExpressContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DefineListener); ok {
		listenerT.EnterDefineExpress(s)
	}
}

func (s *DefineExpressContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DefineListener); ok {
		listenerT.ExitDefineExpress(s)
	}
}

func (s *DefineExpressContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DefineVisitor:
		return t.VisitDefineExpress(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DefineParser) DefineExpress() (localctx IDefineExpressContext) {
	localctx = NewDefineExpressContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, DefineParserRULE_defineExpress)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(72)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case DefineParserDEFAULT_SYMBOL:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(70)
			p.DefineAttribute()
		}

	case DefineParserDEFAULT_TEMPLATE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(71)
			p.DefineTemplate()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IDefineAttributeContext is an interface to support dynamic dispatch.
type IDefineAttributeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDefineAttributeContext differentiates from other interfaces.
	IsDefineAttributeContext()
}

type DefineAttributeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDefineAttributeContext() *DefineAttributeContext {
	var p = new(DefineAttributeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DefineParserRULE_defineAttribute
	return p
}

func (*DefineAttributeContext) IsDefineAttributeContext() {}

func NewDefineAttributeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefineAttributeContext {
	var p = new(DefineAttributeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DefineParserRULE_defineAttribute

	return p
}

func (s *DefineAttributeContext) GetParser() antlr.Parser { return s.parser }

func (s *DefineAttributeContext) DEFAULT_SYMBOL() antlr.TerminalNode {
	return s.GetToken(DefineParserDEFAULT_SYMBOL, 0)
}

func (s *DefineAttributeContext) COLON() antlr.TerminalNode {
	return s.GetToken(DefineParserCOLON, 0)
}

func (s *DefineAttributeContext) SymbolKey() ISymbolKeyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISymbolKeyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISymbolKeyContext)
}

func (s *DefineAttributeContext) SymbolValue() ISymbolValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISymbolValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISymbolValueContext)
}

func (s *DefineAttributeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DefineAttributeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DefineAttributeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DefineListener); ok {
		listenerT.EnterDefineAttribute(s)
	}
}

func (s *DefineAttributeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DefineListener); ok {
		listenerT.ExitDefineAttribute(s)
	}
}

func (s *DefineAttributeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DefineVisitor:
		return t.VisitDefineAttribute(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DefineParser) DefineAttribute() (localctx IDefineAttributeContext) {
	localctx = NewDefineAttributeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, DefineParserRULE_defineAttribute)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(74)
		p.Match(DefineParserDEFAULT_SYMBOL)
	}
	{
		p.SetState(75)
		p.Match(DefineParserCOLON)
	}
	{
		p.SetState(76)
		p.SymbolKey()
	}
	{
		p.SetState(77)
		p.SymbolValue()
	}

	return localctx
}

// IDefineTemplateContext is an interface to support dynamic dispatch.
type IDefineTemplateContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDefineTemplateContext differentiates from other interfaces.
	IsDefineTemplateContext()
}

type DefineTemplateContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDefineTemplateContext() *DefineTemplateContext {
	var p = new(DefineTemplateContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DefineParserRULE_defineTemplate
	return p
}

func (*DefineTemplateContext) IsDefineTemplateContext() {}

func NewDefineTemplateContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefineTemplateContext {
	var p = new(DefineTemplateContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DefineParserRULE_defineTemplate

	return p
}

func (s *DefineTemplateContext) GetParser() antlr.Parser { return s.parser }
